--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,6 @@
-title: GitHub Pages
+title: 白嫖GitHub Pages
 tagline: Your sidekick in using GitHub Pages and blogs
-description: >-
-  Learn how to create a site or blog from your GitHub repositories with GitHub
-  Pages.
+description: 学习通过 GitHub 仓库生成 GitHub Pages 网站。
 tags:
   - GitHub
   - GitHub Pages
@@ -12,31 +10,19 @@ template:
 preferences:
   - type: dropdown
     name: language
-    label: Language
+    label: 语言
     description: 选择你喜欢的语言
     options:
       - label: 中文
         value: zh
-      - label: English
-        value: en
-      - label: Español
-        value: es
+
 before:
   - type: createIssue
-    title: Welcome
+    title: 您好，请点击查看简介
     body: 00_class-introduction-issue.md
 steps:
-  - title: Generate a GitHub Pages site
-    description: Generate a GitHub Pages site with the automatic page generator.
-    translations:
-      zh:
-        title: 生成 GitHub Pages 网站
-        description: 使用生成器(づ￣3￣)づ╭❤～biu的生成GitHub Pages网站。
-      es:
-        title: Activa GitHub Pages
-        description: >-
-          Gnera un sitio web con el generador automático de páginas GitHub
-          Pages.
+  - title: 生成 GitHub Pages 网站
+    description: 使用生成器(づ￣3￣)づ╭❤～biu的生成GitHub Pages网站。
     event: page_build
     link: '{{ repoUrl }}/issues/1'
     actions:
@@ -51,15 +37,8 @@ steps:
         data:
           deploymentUrl: '%actions.pagesUrl.data.html_url%'
       - type: updateBranchProtection
-  - title: Customize your homepage
-    description: Open a pull request with changes to the homepage.
-    translations:
-      zh:
-        title: 自定义您的首页
-        description: 合并pull request带来的首页更改
-      es:
-        title: Personaliza tu página inicial
-        description: Abre un pull request con cambios en la página inicial.
+  - title: 自定义您的首页
+    description: 合并pull request带来的首页更改
     event: pull_request.opened
     link: '{{ repoUrl }}/issues'
     actions:
@@ -79,15 +58,8 @@ steps:
           branch: '%payload.pull_request.head.ref%'
       - type: closeIssue
         issue: Welcome
-  - title: Merge your pull request
-    description: Merge the pull request that customizes your homepage.
-    translations:
-      zh:
-        title: 合并您的pull request
-        description: 合并pull request带来的首页更改 
-      es:
-        title: Combina tu pull request
-        description: Combina el pull request que personaliza tu página inicial.
+  - title: 合并您的pull request
+    description: 合并pull request带来的首页更改 
     event: pull_request.closed
     link: '{{ repoUrl }}/pulls'
     actions:
@@ -113,15 +85,8 @@ steps:
         with: 03_merged-pr.md
         data:
           url: '%actions.issue.data.html_url%'
-  - title: Customize site details
-    description: Edit the configuration file to display your information.
-    translations:
-      zh:
-        title: 定义站点详细信息
-        description: 通过配置文件来改变您网站展示信息
-      es:
-        title: Personaliza los detalles del sitio
-        description: Edita el archivo de configuración para mostrar tu información.
+  - title: 定义站点详细信息
+    description: 通过配置文件来改变您网站展示信息
     event: pull_request
     link: '{{ repoUrl }}/issues'
     actions:
@@ -164,15 +129,8 @@ steps:
         data:
           branch: '%payload.pull_request.head.ref%'
           date: '%payload.pull_request.created_at%'
-  - title: Create a blog post
-    description: Create a new file that will become your first blog post.
-    translations:
-      zh:
-        title: 创作日志
-        description: 通过创建新文件来创作第一篇日志吧 ^_^
-      es:
-        title: Crea un post
-        description: Crea un nuevo archivo que se convertirá en el primer post de tu blog.
+  - title: 创作日志
+    description: 通过创建新文件来创作第一篇日志吧 ^_^
     event: pull_request.synchronize
     link: '{{ repoUrl }}/pulls'
     actions:
@@ -231,15 +189,8 @@ steps:
       - type: createReview
         body: 05_add-front-matter.md
         event: COMMENT
-  - title: Add blog post metadata
-    description: Add YAML front matter to the blog post to display the title and date.
-    translations:
-      zh:
-        title: 添加日志的描述属性
-        description: 通过 YAML 叙述日志的展示标题和其他属性ヽ(^_−)ﾉ
-      es:
-        title: Añade metadatos al post
-        description: Añade texto preliminar YAML al post para mostrar el título y la fecha.
+  - title: 添加日志的描述属性
+    description: 通过 YAML 叙述日志的展示标题和其他属性ヽ(^_−)ﾉ
     event: pull_request.synchronize
     link: '{{ repoUrl }}/pulls'
     actions:
@@ -290,19 +241,8 @@ steps:
       - type: createReview
         body: 06_merge-and-celebrate.md
         event: APPROVE
-  - title: Merge your first post
-    description: >-
-      Merge the pull request so your blog post will appear on your GitHub Pages
-      site.
-    translations:
-      zh:
-        title: 发布第一篇日志
-        description: 合并pull request后您的一篇日志将会被发布到GitHub Pages上
-      es:
-        title: Combina tu primer post
-        description: >-
-          Combina el pull request para que tu post aparezca en tu sitio de
-          GitHub Pages.
+  - title: 发布第一篇日志
+    description: 合并pull request后您的一篇日志将会被发布到GitHub Pages上
     event: pull_request.closed
     link: '{{ repoUrl }}/pulls'
     actions:
